#SUBDIRS = checktools converters differential difftools filetools geomatics ionosphere MDPtools mergetools positioning reszilla Rinextools time visibility
SUBDIRS = checktools converters differential difftools filetools geomatics ionosphere MDPtools mergetools positioning Rinextools time visibility
