#SUBDIRS = checktools converters differential difftools filetools geomatics ionosphere MDPtools mergetools positioning reszilla Rinextools time visibility
SUBDIRS = checktools converters differential difftools filetools geomatics ionosphere MDPtools mergetools multipath positioning Rinextools time visibility
