# $Id: Makefile.am 1765 2009-03-03 16:59:29Z renfroba $
SUBDIRS = DataAvailability \
      MDPtools \
	  Rinextools \
	  checktools \
	  clocktools \
	  converters \
	  differential \
	  difftools \
	  filetools \
	  geomatics \
	  ionosphere \
	  mergetools \
	  multipath \
	  performance \
	  positioning \
	  rfw \
	  reszilla \
	  swrx \
	  time \
	  visibility
