INCLUDES = -I../src
LDADD = ../src/libgpstk.la

bin_PROGRAMS = example1 example2 example3 example4 example5
example1_SOURCES = example1.cpp
example2_SOURCES = example2.cpp
example3_SOURCES = example3.cpp
example4_SOURCES = example4.cpp
example5_SOURCES = example5.cpp

EXTRA_DIST = bahr1620.04m bahr1620.04o bahr1620.04n
