# $Id$
INCLUDES = -I$(srcdir)/../src -I$(srcdir)/../lib/procframe -I$(srcdir)/../lib/vdraw -I$(srcdir)/../lib/vplot
LDADD = ../src/libgpstk.la ../lib/procframe/libprocframe.la ../lib/vdraw/libvdraw.la ../lib/vplot/libvplot.la

bin_PROGRAMS = example1 example2 example3 example4 example5 example6 example7 \
example8 example9 example10 example11 example12 example13 example14
example1_SOURCES = example1.cpp
example2_SOURCES = example2.cpp
example3_SOURCES = example3.cpp
example4_SOURCES = example4.cpp
example5_SOURCES = example5.cpp
example6_SOURCES = example6.cpp
example7_SOURCES = example7.cpp
example8_SOURCES = example8.cpp
example9_SOURCES = example9.cpp
example10_SOURCES = example10.cpp
example11_SOURCES = example11.cpp
example12_SOURCES = example12.cpp
example13_SOURCES = example13.cpp
example14_SOURCES = example14.cpp


EXTRA_DIST = bahr1620.04m bahr1620.04o bahr1620.04n ebre030a.02o ebre0300.02o \
bell030a.02o bell0300.02o brdc0300.02n onsa2240.05o OCEAN-GOT00.dat PRN_GPS \
igs13356.sp3 igs13355.sp3 igs13354.sp3 igs12851.sp3 igs12852.sp3 igs12853.sp3 \
coco2370.04o pppconf.txt igs05.atx igs14811.sp3 igs14812.sp3 igs14813.sp3 \
igs_01.atx madr1480.08o tlse1480.08o sfer1480.08o scoa1480.08o acor1480.08o \
popconf.txt
