# src/CMakeLists.txt
# Please add in alphabetical order.
set (gpstk_src
      AlmOrbit.cpp
      ANSITime.cpp
      Antenna.cpp
      AntexReader.cpp
      ARBase.cpp
      ARLambda.cpp
      ARMLambda.cpp
      ARSimple.cpp
      AstronomicalFunctions.cpp
      Bancroft.cpp
      BasicFramework.cpp
      BinexData.cpp
      BinUtils.cpp
      BLQDataReader.cpp
      BrcClockCorrection.cpp
      BrcKeplerOrbit.cpp
      Chi2Distribution.cpp
      CivilTime.cpp
      ClockSatStore.cpp
      CNAVClock.cpp
      CNAVEphemeris.cpp
      CNAV2EphClk.cpp
      CodeBuffer.cpp
      CommandLine.cpp
      CommandOption.cpp
      CommandOptionParser.cpp
      CommandOptionWithCommonTimeArg.cpp
      CommandOptionWithPositionArg.cpp
      CommandOptionWithTimeArg.cpp
      CommonTime.cpp
      ConfDataReader.cpp
      ConfDataWriter.cpp
      DCBDataReader.cpp
      DOP.cpp
      DebugUtils.cpp
      EngAlmanac.cpp
      EngEphemeris.cpp
      EngNav.cpp
      ENUUtil.cpp
      EOPDataStore.cpp
      EphemerisRange.cpp
      Epoch.cpp
      EpochDataStore.cpp
      Exception.cpp
      expandtilde.cpp
      Expression.cpp
      ExtractCombinationData.cpp
      ExtractData.cpp
      FFData.cpp
      FFStream.cpp
      FICData.cpp
      FICData109.cpp
      FICData162.cpp
      FICData62.cpp
      FICData9.cpp
      FICHeader.cpp
      FileHunter.cpp
      FileSpec.cpp
      FIRDifferentiator5thOrder.cpp
      GalEphemeris.cpp
      GalEphemerisStore.cpp
      GaussianDistribution.cpp
      GenXSequence.cpp
      GloEphemeris.cpp
      GloEphemerisStore.cpp
      GloFreqIndex.cpp
      GPSAlmanacStore.cpp
      GPSEphemerisStore.cpp
      GPSOrbElemStore.cpp
      GPSWeek.cpp
      GPSWeekSecond.cpp
      GPSWeekZcount.cpp
      GPSZcount.cpp
      HelmertTransform.cpp
      IonexData.cpp
      IonexHeader.cpp
      IonexStore.cpp
      IonoModel.cpp
      IonoModelStore.cpp
      JulianDate.cpp
      LinearClockModel.cpp
      LoopedFramework.cpp
      MJD.cpp
      MoonPosition.cpp
      MOPSWeight.cpp
      MSCData.cpp
      MSCStore.cpp
      Namelist.cpp
      NEDUtil.cpp
      ObsClockModel.cpp
      ObsEpochMap.cpp
      ObsID.cpp
      ObsRngDev.cpp
      OceanLoading.cpp
      OrbElem.cpp
      OrbElemCNAV.cpp
      OrbElemCNAV2.cpp
      OrbElemFIC109.cpp
      OrbElemFIC9.cpp
      OrbElemICE.cpp
      OrbElemLNav.cpp
      OrbElemRinex.cpp
      PackedNavBits.cpp
      PlanetEphemeris.cpp
      PoleTides.cpp
      Position.cpp
      PositionSatStore.cpp
      PowerSum.cpp
      PRSolution.cpp
      PRSolution2.cpp
      RACRotation.cpp
      ReferenceFrame.cpp
      Rinex3ClockData.cpp
      Rinex3ClockHeader.cpp
      Rinex3EphemerisStore.cpp
      Rinex3NavData.cpp
      Rinex3NavHeader.cpp
      Rinex3ObsData.cpp
      Rinex3ObsHeader.cpp
      RinexClockData.cpp
      RinexClockHeader.cpp
#      RinexConverter.cpp
      RinexMetData.cpp
      RinexMetHeader.cpp
      RinexNavData.cpp
      RinexNavHeader.cpp
      RinexObsData.cpp
      RinexObsHeader.cpp
      RinexObsID.cpp
      RinexSatID.cpp
      RinexUtilities.cpp
      RK4VehicleModel.cpp
      RungeKutta4.cpp
      SatDataReader.cpp
      SEMAlmanacStore.cpp
      SEMData.cpp
      SEMHeader.cpp
      SimpleIURAWeight.cpp
      SimpleKalmanFilter.cpp
      SMODFData.cpp
      SolidTides.cpp
      SourceID.cpp
      SP3Data.cpp
      SP3EphemerisStore.cpp
      SP3Header.cpp
      SP3SatID.cpp
      SpecialFunctions.cpp
      StudentDistribution.cpp
      SunPosition.cpp
      SVExclusionList.cpp
      SVNumXRef.cpp
      SVPCodeGen.cpp
      SystemTime.cpp
      TimeConverters.cpp
      TimeString.cpp
      TimeSystem.cpp
      TimeTag.cpp
      Triple.cpp
      TropModel.cpp
      TypeID.cpp
      UnixTime.cpp
      VectorBase.cpp
      WxObsMap.cpp
      X1Sequence.cpp
      X2Sequence.cpp
      Xvt.cpp
      YDSTime.cpp
      YumaAlmanacStore.cpp
      YumaData.cpp
)

#add_library (gpstk_static STATIC ${gpstk_src})
add_library (gpstk SHARED ${gpstk_src})
