# $Id: Makefile.am 3140 2012-06-18 15:03:02Z susancummins $
SUBDIRS = ANSITime \
		  BinUtils \
		  CivilTime \
		  CommonTime \
		  gpsNavMsg \
		  GPSWeekSecond \
		  GPSWeekZcount \
		  IonoModel \
		  JulianDate \
		  Matrix \
		  MJD \
		  MSC \
		  PolyFit \
		  PowerSum \
		  RACRotation \
		  RinexEphemerisStore \
		  RinexMet \
		  RinexNav \
		  RinexObs \
		  RungeKutta4 \
		  SEM \
		  Stats \
		  TimeConverters \
		  UnixTime \
		  Vector \
		  YDSTime \
		  Yuma
