# tests/CMakeLists.txt

#add_subdirectory (ANSITime)
#add_subdirectory (BinUtils)
#add_subdirectory (CivilTime)
#add_subdirectory (CommonTime)
#add_subdirectory (gpsNavMsg)
#add_subdirectory (GPSWeekSecond)
#add_subdirectory (GPSWeekZcount)
#add_subdirectory (IonoModel)
#add_subdirectory (JulianDate)
#add_subdirectory (Matrix)
#add_subdirectory (MJD)
#add_subdirectory (PolyFit)
#add_subdirectory (PowerSum)
#add_subdirectory (RACRotation)
#add_subdirectory (RinexEphemerisStore)
#add_subdirectory (RinexMet)
#add_subdirectory (RinexNav)
#add_subdirectory (RinexObs)
#add_subdirectory (RungeKutta4)
#add_subdirectory (SEM)
#add_subdirectory (Stats)
#add_subdirectory (TimeConverters)
#add_subdirectory (UnixTime)
#add_subdirectory (Vector)
#add_subdirectory (YDSTime)
#add_subdirectory (Yuma)


