INCLUDES = -I../src
LDADD = ../src/libgpstk.la

noinst_PROGRAMS = rinex_obs_test rinex_nav_test rinex_met_test rinex_met_read_write rinex_nav_read_write rinex_obs_read_write EphComp AnotherFileFilterTest FileSpecTest MatrixTest exceptiontest petest stringutiltest daytimetest rktest gpszcounttest positiontest

rinex_obs_test_SOURCES = rinex_obs_test.cpp
rinex_nav_test_SOURCES = rinex_nav_test.cpp
rinex_met_test_SOURCES = rinex_met_test.cpp

rinex_met_read_write_SOURCES = rinex_met_read_write.cpp
rinex_nav_read_write_SOURCES = rinex_nav_read_write.cpp
rinex_obs_read_write_SOURCES = rinex_obs_read_write.cpp

AnotherFileFilterTest_SOURCES = AnotherFileFilterTest.cpp

EphComp_SOURCES = EphComp.cpp

FileSpecTest_SOURCES = FileSpecTest.cpp

MatrixTest_SOURCES = MatrixTest.cpp

exceptiontest_SOURCES = exceptiontest.cpp

petest_SOURCES = petest.cpp

stringutiltest_SOURCES = stringutiltest.cpp

daytimetest_SOURCES = daytimetest.cpp

rktest_SOURCES = RungeKuttaTest.cpp

gpszcounttest_SOURCES = gpszcounttest.cpp

positiontest_SOURCES = positiontest.cpp
