# $Id: Makefile.am 1211 2008-04-22 06:10:13Z ckuethe $
INCLUDES = -I$(srcdir)/../../src
LDADD = ../../src/libgpstk.la

bin_PROGRAMS = dallandev ffp mallandev nallandev oallandev ohadamarddev ORDPhaseParser pff rmoutlier scale tallandev TIAPhaseParser trunc

dallandev_SOURCES = dallandev.cpp
ffp_SOURCES = ffp.cpp
mallandev_SOURCES = mallandev.cpp
nallandev_SOURCES = nallandev.cpp
oallandev_SOURCES = oallandev.cpp
rmoutlier_SOURCES = rmoutlier.cpp
ohadamarddev_SOURCES = ohadamarddev.cpp
ORDPhaseParser_SOURCES = ORDPhaseParser.cpp
TIAPhaseParser_SOURCES = TIAPhaseParser.cpp
pff_SOURCES = pff.cpp
scale_SOURCES = scale.cpp
tallandev_SOURCES = tallandev.cpp
trunc_SOURCES = trunc.cpp
