# $Id: Makefile.am 741 2007-09-15 16:14:43Z mvermeer $
# please add in alphabetic order
INCLUDES = -I$(srcdir)/../../src
lib_LTLIBRARIES = libvplot.la
libvplot_la_LDFLAGS = -version-number @GPSTK_SO_VERSION@
libvplot_la_SOURCES = BorderLayout.cpp Circle.cpp Color.cpp Comment.cpp \
EPSImage.cpp Frame.cpp GraphicsConstants.cpp GridLayout.cpp \
HLayout.cpp Line.cpp Marker.cpp PSImage.cpp PSImageBase.cpp \
Path.cpp Polygon.cpp  Rectangle.cpp SVGImage.cpp StrokeStyle.cpp \
Text.cpp TextStyle.cpp VGImage.cpp VLayout.cpp ViewerManager.cpp 

incldir = $(includedir)/gpstk
incl_HEADERS = BasicShape.hpp BorderLayout.hpp Circle.hpp Color.hpp \
Comment.hpp EPSImage.hpp Fillable.hpp Frame.hpp GraphicsConstants.hpp \
GridLayout.hpp HLayout.hpp Helper.hpp Layout.hpp Line.hpp \
Markable.hpp Marker.hpp PSImage.hpp PSImageBase.hpp Path.hpp Polygon.hpp \
Rectangle.hpp SVGImage.hpp StrokeStyle.hpp Text.hpp TextStyle.hpp VGImage.hpp \
VLayout.hpp VPlotException.hpp ViewerManager.hpp 
