# $Id: Makefile.am 741 2007-09-15 16:14:43Z mvermeer $
INCLUDES = -I$(srcdir)/../../src
lib_LTLIBRARIES = libvplot.la
libvplot_la_LDFLAGS = -version-number @GPSTK_SO_VERSION@
libvplot_la_SOURCES = Circle.cpp Color.cpp Comment.cpp EPSImage.cpp Frame.cpp \
GraphicsConstants.cpp Line.cpp Marker.cpp Path.cpp Polygon.cpp \
PSImageBase.cpp PSImage.cpp Rectangle.cpp StrokeStyle.cpp SVGImage.cpp \
Text.cpp TextStyle.cpp VGImage.cpp ViewerManager.cpp VLayout.cpp HLayout.cpp

incldir = $(includedir)/gpstk
incl_HEADERS = BasicShape.hpp Circle.hpp Color.hpp Comment.hpp EPSImage.hpp \
Fillable.hpp Frame.hpp GraphicsConstants.hpp Helper.hpp Layout.hpp Line.hpp \
Markable.hpp Marker.hpp Path.hpp Polygon.hpp PSImageBase.hpp PSImage.hpp \
Rectangle.hpp StrokeStyle.hpp SVGImage.hpp Text.hpp TextStyle.hpp VGImage.hpp \
ViewerManager.hpp VLayout.hpp VPlotException.hpp HLayout.hpp
