# $Id$
INCLUDES = -I$(srcdir)/../src -I$(srcdir)/../lib/procframe
LDADD = ../src/libgpstk.la ../lib/procframe/libprocframe.la

bin_PROGRAMS = example1 example2 example3 example4 example5 example6 example7 \
example8 example9 example10
example1_SOURCES = example1.cpp
example2_SOURCES = example2.cpp
example3_SOURCES = example3.cpp
example4_SOURCES = example4.cpp
example5_SOURCES = example5.cpp
example6_SOURCES = example6.cpp
example7_SOURCES = example7.cpp
example8_SOURCES = example8.cpp
example9_SOURCES = example9.cpp
example10_SOURCES = example10.cpp

EXTRA_DIST = bahr1620.04m bahr1620.04o bahr1620.04n ebre030a.02o ebre0300.02o \
bell030a.02o bell0300.02o brdc0300.02n onsa2240.05o OCEAN-GOT00.dat PRN_GPS \
igs13356.sp3 igs13355.sp3 igs13354.sp3 igs12851.sp3 igs12852.sp3 igs12853.sp3 \
coco2370.04o pppconf.txt
